--- a/README
+++ b/README
@@ -1,5 +1,13 @@
-To install this ppm package, run the following command
-in the current directory:
+To install SOAP::Lite, run the following commands:
 
-   ppm install SOAP-Lite-0.70_04.ppd
+ perl Makefile.PL
+ make
+ make test
+ make install
+
+The test suite requires perl 5.6.0, so you will experience
+failing tests under older versions of perl.
+
+SOAP::Lite itself should work with perls as old as 5.5.4, but
+your mileage may vary.
 
