--- a/lib/SOAP/Serializer.pod
+++ b/lib/SOAP/Serializer.pod
@@ -4,8 +4,6 @@
 # SOAP::Lite is free software; you can redistribute it
 # and/or modify it under the same terms as Perl itself.
 #
-# $Id$
-#
 # ======================================================================
 
 =pod
@@ -126,7 +124,7 @@ When serializing an object, or blessed hash reference, into XML, C<SOAP::Seriali
 
 =item Naming Convention
 
-The subroutine should always be prepended with C<as_> followed by the type's name. The type's name must have all colons (':') substituded with an underscore ('_').
+The subroutine should always be prepended with C<as_> followed by the type's name. The type's name must have all colons (':') substituted with an underscore ('_').
 
 =item Input
 
