--- a/Changes
+++ b/Changes
@@ -15,6 +15,9 @@ http://rt.cpan.org/Public/Dist/Display.html?Name=SOAP-Lite
 THIS RELEASE
 -----------------------------------------------------------------------
 
+1.02 July 30, 2013
+    ! #87421 1.01 release blew out xml versions. mea culpa.
+
 1.01 July 29, 2013
     ! #84168 Test t/02-payload.t fails under Perl 5.17.10
     ! #87127 TEST.pl removed from MANIFEST
