--- a/Changes
+++ b/Changes
@@ -15,6 +15,9 @@ http://rt.cpan.org/Public/Dist/Display.html?Name=SOAP-Lite
 THIS RELEASE
 -----------------------------------------------------------------------
 
+1.04 August 9, 2013
+    ! #87605 Skip XML::Parser::Lite tests if it is missing [github.com/omega] 
+
 1.03 August 4, 2013
     ! #87195 Remove DIME::Tools dep until we can work around its issues
 
