Import of PHRED/SOAP-Lite-1.05 from CPAN.
gitpan-cpan-distribution: SOAP-Lite
gitpan-cpan-version:      1.05
gitpan-cpan-path:         PHRED/SOAP-Lite-1.05.tar.gz
gitpan-cpan-author:       PHRED
gitpan-cpan-maturity:     released

--- a/Changes
+++ b/Changes
@@ -15,6 +15,9 @@ http://rt.cpan.org/Public/Dist/Display.html?Name=SOAP-Lite
 THIS RELEASE
 -----------------------------------------------------------------------
 
+1.05 August 18, 2013
+    ! #87848 Fix manifest, fix invalid http version from release blunder
+
 1.04 August 9, 2013
     ! #87605 Skip XML::Parser::Lite tests if it is missing [github.com/omega] 
 
