Import of PHRED/SOAP-Lite-1.06 from CPAN.
gitpan-cpan-distribution: SOAP-Lite
gitpan-cpan-version:      1.06
gitpan-cpan-path:         PHRED/SOAP-Lite-1.06.tar.gz
gitpan-cpan-author:       PHRED
gitpan-cpan-maturity:     released

--- a/Changes
+++ b/Changes
@@ -15,6 +15,10 @@ http://rt.cpan.org/Public/Dist/Display.html?Name=SOAP-Lite
 THIS RELEASE
 -----------------------------------------------------------------------
 
+1.06 August 21, 2013
+    ! #87935 skip all MIME-Parser tests if it is not installed
+    ! #87787 Use of uninitialized value $ns in Lite.pm 
+
 1.05 August 18, 2013
     ! #87848 Fix manifest, fix invalid http version from release blunder
 
