--- a/Changes
+++ b/Changes
@@ -15,6 +15,9 @@ http://rt.cpan.org/Public/Dist/Display.html?Name=SOAP-Lite
 THIS RELEASE
 -----------------------------------------------------------------------
 
+1.08 November 8, 2013
+    ! #15703 add no_index for examples to prevent CPAN pollution [githumb.com/sergeyromanov]
+
 1.07 November 7, 2013
     ! #89948 Remove warning when Content-Id is not present
 
