--- a/Changes
+++ b/Changes
@@ -15,6 +15,9 @@ http://rt.cpan.org/Public/Dist/Display.html?Name=SOAP-Lite
 THIS RELEASE
 -----------------------------------------------------------------------
 
+1.11 February 21, 2014
+    ! #93080 bug when SOAP::Lite is trying to parse WSDL definition by https with custom settings
+
 1.10 January 23, 2014 
     ! Fixed uninitialized warning when Context-Length is not set [github/dbeusee]
     ! avoid string eval in as_base64 [github/otrosien]
