--- a/Changes
+++ b/Changes
@@ -15,6 +15,9 @@ http://rt.cpan.org/Public/Dist/Display.html?Name=SOAP-Lite
 THIS RELEASE
 -----------------------------------------------------------------------
 
+1.12 November 26, 2014
+    ! #100557 Redefined sub in SOAP::Lite::Deserializer::XMLSchema2001
+
 1.11 February 21, 2014
     ! #93080 bug when SOAP::Lite is trying to parse WSDL definition by https with custom settings
 
