Import of PHRED/SOAP-Lite-1.13.tar.gz from CPAN.
gitpan-cpan-distribution: SOAP-Lite
gitpan-cpan-version:      1.13
gitpan-cpan-path:         PHRED/SOAP-Lite-1.13.tar.gz
gitpan-cpan-author:       PHRED
gitpan-cpan-maturity:     released

--- a/Changes
+++ b/Changes
@@ -15,6 +15,9 @@ http://rt.cpan.org/Public/Dist/Display.html?Name=SOAP-Lite
 THIS RELEASE
 -----------------------------------------------------------------------
 
+1.13 December 30, 2014
+    ! Fixed undefined value error when using bugzilla's xmlrpc.cgi (bugzilla's API) [dbeusee]
+
 1.12 November 26, 2014
     ! #100557 Redefined sub in SOAP::Lite::Deserializer::XMLSchema2001
 
